REFERIDOS - Se agregó la dependencia de jeet a referidos.

--- a/sales/modules/referidos/views/consulta.html
+++ b/sales/modules/referidos/views/consulta.html
@@ -1,22 +1,18 @@
 <section class="referidos--home">
 
     <h1>Solicitar tu cuenta sueldo online es muy simple:</h1>
-    <ul>
+    <ul class="icons-consulta">
         <li>
             <span class="icon-personal"></span>
             <p>Datos <br> personales</p>
-        </li>
-        <li>
-            <span class="icon-job"></span>
-            <p>Datos <br> laborales</p>
         </li>
         <li>
             <span class="icon-settings"></span>
             <p>Configuración <br> Cuenta Sueldo</p>
         </li>
         <li>
-            <span class="icon-note"></span>
-            <p>Envío nota <br> empleador</p>
+            <span class="icon-job"></span>
+            <p>Registro <br> de firma</p>
         </li>
     </ul>
 
