GULP - Se eliminó la tarea de copiar settings y fbin a deploy. - Se fixeo el problema de sass al querer deployar. - Se opctimizó la tarea de sass en dev
MODULE
- Se importan los estilos globales en cada módulo.
- Se elimina de inicio.html la llamada a los estilos globales.

--- a/sales/css/globalStyle.css
+++ b/sales/css/globalStyle.css
@@ -1,6 +1,20 @@
 @charset "UTF-8";
-/*@import "helpers/all";
-@import "core/all";*/
+/*@import "helpers/all";*/
+/*
+  =========================================
+
+    GRID SYSTEM
+
+    -> Thanks to Jeet Framework - http://jeet.gs/
+    
+    NORMALIZER
+/// -> Thanks to Nicolas Gallagher's Normalize.css - http://necolas.github.io/normalize.css/
+
+	=========================================
+*/
+/*@import "settings";
+@import "typography";
+@import "base";*/
 /* Web Fonts */
 @font-face {
   font-family: 'BBVA Web Light';
