--- a/sales/styles/style.scss
+++ b/sales/styles/style.scss
@@ -1,3 +1,3 @@
-/*@import "helpers/all";
-@import "core/all";*/
-@import "templates/all"
+/*@import "helpers/all";*/
+@import "core/all";
+@import "templates/all";
