--- a/sales/modules/referidos/templates/banner.html
+++ b/sales/modules/referidos/templates/banner.html
@@ -1,5 +1,6 @@
 <div class="referidos--img-home">
-    <h3>PLAN SUELDO BBVA FRANCÉS</h3>
-    <h1>Ahora vos elegís <br> dónde cobrar tu sueldo.</h1>
-    <h3 class="last-text">CON TU PRIMER SUELDO TE DAMOS 50.000 KMS</h3> 
+    <div class="content-text">
+        <h3>PLAN SUELDO BBVA FRANCÉS</h3>
+        <h1>Ahora vos elegís <br> dónde cobrar tu sueldo.</h1> 
+    </div>
 </div>
