--- a/sales/modules/referidos/views/consulta.html
+++ b/sales/modules/referidos/views/consulta.html
@@ -1,21 +1,20 @@
 <section class="referidos--home">
 
-    <h1>Solicitar tu cuenta sueldo online es muy simple:</h1>
+    <h1 class="page-title">Solicitar tu cuenta sueldo online es muy simple:</h1>
     <ul class="icons-consulta">
         <li>
-            <span class="icon-personal"></span>
+            <span class="icon-g-ico_people"></span>
             <p>Datos <br> personales</p>
         </li>
         <li>
-            <span class="icon-settings"></span>
+            <span class="icon-g-herramienta"></span>
             <p>Configuración <br> Cuenta Sueldo</p>
         </li>
         <li>
-            <span class="icon-job"></span>
+            <span class="icon-g-Paper"></span>
             <p>Registro <br> de firma</p>
         </li>
     </ul>
-
     <div class="row">
         <div class="col-xs-12 text-center">
             <button class="btn btn-enviar" ng-click="empezar()">Empezar</button>
