--- a/sales/styles/helpers/_all.scss
+++ b/sales/styles/helpers/_all.scss
@@ -1,6 +1,7 @@
-@import "./core/settings";
+@import "../core/settings";
 @import "functions";
-@import "mixins";
-@import "placeholders";
 @import "classes";
-@import "animations";
+/*@import "mixins";
+@import "placeholders";
+
+@import "animations";*/
