--- a/sales/modules/referidos/views/paso1.html
+++ b/sales/modules/referidos/views/paso1.html
@@ -1,5 +1,5 @@
 <div class="row plusPadLeft">
-	<h1 class="text-center">Contanos sobre vos.</h1>
+	<h1 class="text-center main-title">Contanos sobre vos.</h1>
 	<div class="col-xs-12">
 		<form>
 			<div class="form-group col-md-6">
@@ -50,7 +50,7 @@
 					</select>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 text-center">
+				<div class="col-xs-12 text-center bt-step-one">
 					<button class="btn btn-enviar" ng-click="continue()">Continuar</button>
 				</div>
 			</div>
