--- a/sales/modules/referidos/views/paso2.html
+++ b/sales/modules/referidos/views/paso2.html
@@ -1,5 +1,5 @@
 <div class="row plusPadLeft">
-	<h1 class="text-center">Ayúdanos a contactarte de la mejor manera..</h1>
+	<h1 class="text-center main-title">Ayúdanos a contactarte de la mejor manera.</h1>
 	<div class="col-xs-12">
 		<form>
 			<div class="form-group col-md-6">
@@ -10,6 +10,11 @@
 			<div class="form-group col-md-6">
 				<label for="CelId" class="control-label">Celular</label>
 				<input type="text" id="CelId" class="form-control">
+			</div>
+			<div class="row">
+				<div class="col-xs-12 text-center bt-step-one">
+					<button class="btn btn-enviar" ng-click="continue()">Continuar</button>
+				</div>
 			</div>
 		</form>
 	</div>
