--- a/sales/styles/helpers/_classes.scss
+++ b/sales/styles/helpers/_classes.scss
@@ -11,3 +11,7 @@
 // -------------------------------------
 //   Variables
 // -------------------------------------
+
+.m-0 { margin: 0 !important; }
+.mt-15 { margin-top: 15px !important; }
+.mt-25 { margin-top: 25px !important; }
