--- a/sales/modules/referidos/views/paso4.html
+++ b/sales/modules/referidos/views/paso4.html
@@ -8,16 +8,9 @@
 
 		<form name="dataRegister" class="text-center mt-25">
 			<div class="center-wrapper">
-				<div>
-					<input name="goToOffice" type="radio" ng-model="registerOption" value="goToOffice">
-					<label for="goToOffice">Voy a una sucursal</label>
-				</div>
-				<div>
-					<input name="theyGo" type="radio" ng-model="registerOption" value="theyGo">
-					<label for="theyGo">Visitenme a mi trabajo</label>
-				</div>
+				<div radio-button radio-options="radio"></div>
 			</div>
-			<div class="row margin-input" ng-if="registerOption == 'theyGo'">
+			<div class="row margin-input" ng-if="radio.selected == 'theyGo'">
 				<div class="form-group">
 					<label for="nombre" class="control-label">Calle</label>
 					<input type="text" id="street" class="form-control">
@@ -43,16 +36,16 @@
 				<div class="clear-fix">
 					<div class="form-group input-inline-2 select-element">
 						<label class="control-label">Provincia</label>
-						<select id="provinceId" ng-model="data.nameSelected" ng-options="name.description for name in data.names track by name.id"
-							class="btn-select">
-							</select>
+						<input type="text" id="provincia" ng-model="envio.provincia" placeholder="" uib-typeahead="provincia as provincia.nombre for provincia in provincias | filter:$viewValue | limitTo:5"
+							class="form-control" typeahead-show-hint="true" typeahead-editable="false" typeahead-min-length="0" typeahead-select-on-blur="true"
+							autocomplete="off">
 					</div>
 
 					<div class="form-group input-inline-2 select-element">
 						<label class="control-label">Localidad</label>
-						<select id="locationId" ng-model="data.nameSelected" ng-options="name.description for name in data.names track by name.id"
-							class="btn-select">
-							</select>
+						<input type="text" id="localidad" ng-model="envio.localidad" placeholder="" uib-typeahead="localidad as localidad.nombre for localidad in localidades| filter:$viewValue | limitTo:5"
+							class="form-control" typeahead-show-hint="true" typeahead-editable="false" typeahead-min-length="0" typeahead-select-on-blur="true"
+							autocomplete="off">
 					</div>
 				</div>
 			</div>
